3.Adding-Logging/observability/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: docker.io/grafana/grafana:latest
        name: grafana
        ports:
        - containerPort: 3000
          name: grafana
---
kind: Service
apiVersion: v1
metadata:
  name: grafana
  labels:
    app: grafana
  namespace: observability
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    app: grafana
